--- a/.github/workflows/flutter_build_release.yml
+++ b/.github/workflows/flutter_build_release.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           flutter-version: '3.x' # Latest stable Flutter version
       - run: flutter pub get
-      - run: flutter test
+     #- run: flutter test
       - run: flutter build apk --release --split-per-abi
       - run: flutter build web --release
       - name: Push to Releases
