--- a/.github/workflows/flutter_build_release.yml
+++ b/.github/workflows/flutter_build_release.yml
@@ -20,10 +20,11 @@ jobs:
      #- run: flutter test
       - run: flutter build apk --release --split-per-abi
       - run: flutter build web --release
+      - run: cd build/web && zip web.zip .
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/web"
+          artifacts: "build/app/outputs/apk/release/*,build/web/web.zip"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 
