--- a/.github/workflows/flutter_build_release.yml
+++ b/.github/workflows/flutter_build_release.yml
@@ -20,7 +20,9 @@ jobs:
      #- run: flutter test
       - run: flutter build apk --release --split-per-abi
       - run: flutter build web --release
-      - run: cd build/web && zip web.zip .
+      - run: |
+        cd build/web
+        zip -r web.zip .
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
